--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
